--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Zacharilius/MapTileServer#readme",
   "dependencies": {
+    "express": "^4.16.2",
     "mapnik": "^3.6.2"
   },
   "devDependencies": {
