--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
-{
+  {
   "name": "maptileserver",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
+    "compile": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,10 +24,12 @@
   "homepage": "https://github.com/Zacharilius/MapTileServer#readme",
   "dependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
-    "mapnik": "^3.6.2"
+    "mapnik": "^3.6.2",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
