--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "maptileserver",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server/server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "build": "webpack",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "webpack",
+    "build:server": "tsc",
     "server:watch": "nodemon --watch 'src/**/*' --exec 'npm run build && npm run start'",
     "server:webpack": "webpack --d --watch",
-    "start": "node src/server/server.js",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -41,6 +43,11 @@
     "webpack-dev-middleware": "^1.12.0"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "@types/express": "^4.17.6",
+    "@types/mapnik": "^3.0.1",
+    "@types/mkdirp": "^1.0.1",
+    "@types/node": "^14.0.14",
+    "nodemon": "^1.12.1",
+    "typescript": "^3.9.5"
   }
 }
