--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack",
     "build:server": "tsc",
-    "server:watch": "nodemon --watch 'src/**/*' --exec 'npm run build && npm run start'",
+    "server:watch": "nodemon --watch 'src/**/*' -e ts,js --exec 'npm run build && npm run start'",
     "server:webpack": "webpack --d --watch",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -44,7 +44,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
-    "@types/mapnik": "^3.0.1",
     "@types/mkdirp": "^1.0.1",
     "@types/node": "^14.0.14",
     "nodemon": "^1.12.1",
