--- a/package.json
+++ b/package.json
@@ -28,25 +28,26 @@
   },
   "homepage": "https://github.com/Zacharilius/MapTileServer#readme",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "express": "^4.16.2",
-    "leaflet": "^1.2.0",
-    "mapnik": "^3.6.2",
-    "mkdirp": "^0.5.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-leaflet": "^1.7.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0"
+    "express": "^4.17.1",
+    "leaflet": "^1.6.0",
+    "mapnik": "^4.3.1",
+    "mkdirp": "^1.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mkdirp": "^1.0.1",
     "@types/node": "^14.0.14",
-    "nodemon": "^1.12.1",
-    "typescript": "^3.9.5"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^2.0.4",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^1.12.2"
   }
 }
