--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "nodemon": "^2.0.4",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^1.12.2"
+    "webpack-cli": "^3.3.12"
   }
 }
