--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack",
     "build:server": "tsc",
+    "lint": "eslint -c .eslintrc.js src/**/*.[tj]s",
     "server:watch": "nodemon --watch 'src/**/*' -e ts,js --exec 'npm run build && npm run start'",
     "server:webpack": "webpack --d --watch",
     "start": "node dist/server.js",
@@ -40,10 +41,19 @@
     "@types/express": "^4.17.6",
     "@types/mkdirp": "^1.0.1",
     "@types/node": "^14.0.14",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
