--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack",
     "build:server": "tsc",
-    "lint": "eslint -c .eslintrc.js src/**/*.[tj]s",
+    "lint": "eslint -c .eslintrc.js src/**/*.[tj]s test/**/*.[tj]s",
     "server:watch": "nodemon --watch 'src/**/*' -e ts,js --exec 'npm run build && npm run start'",
     "server:webpack": "webpack --d --watch",
     "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "coverage": "nyc npm run test"
   },
   "repository": {
     "type": "git",
@@ -38,15 +39,20 @@
     "react-leaflet": "^2.7.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
     "@types/mkdirp": "^1.0.1",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
@@ -54,7 +60,13 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^7.2.0",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
