Extract mapnik types to shared types directory to work with ts-node. Change tsconfig noImplicitAny setting to true.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "target": "es5"
+    "target": "es5",
+    "noImplicitAny": true,
+    "jsx": "react",
+    "typeRoots" : ["./node_modules/@types", "./types"]
+
   },
-  "include": ["./src/server/**/*"]
+  "include": [
+    "./src/server/**/*"
+  ]
 }
     
