--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^14.0.14",
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^9.0.4",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "babel-core": "^6.26.3",
