--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:client": "webpack",
     "build:server": "tsc",
     "lint": "eslint -c .eslintrc.js src/**/*.[tj]s test/**/*.[tj]s",
-    "server:watch": "nodemon --watch 'src/**/*' -e ts,js --exec 'npm run build && npm run start'",
+    "server:watch": "nodemon --watch 'src/**/*' -e ts,js,tsx --exec 'npm run build && npm run start'",
     "server:webpack": "webpack --d --watch",
     "start": "node dist/server.js",
     "test": "mocha -r ts-node/register test/**/*.test.ts",
@@ -36,15 +36,19 @@
     "mkdirp": "^1.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-leaflet": "^2.7.0"
+    "react-leaflet": "^2.7.0",
+    "ts-loader": "^7.0.5"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
+    "@types/leaflet": "^1.5.15",
     "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
     "@types/proxyquire": "^1.3.28",
+    "@types/react": "^16.9.41",
+    "@types/react-leaflet": "^2.5.2",
     "@types/sinon": "^9.0.4",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
@@ -54,6 +58,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.2.0",
+    "csstype": "^2.6.11",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
