--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack",
     "build:server": "tsc",
-    "lint": "eslint -c .eslintrc.js src/**/*.[tj]s test/**/*.[tj]s",
+    "coverage": "nyc npm run test",
+    "lint": "eslint -c .eslintrc.js src/**/*.{ts,tsx} test/**/*.{ts,tsx} --quiet",
     "server:watch": "nodemon --watch 'src/**/*' -e ts,js,tsx --exec 'npm run build && npm run start'",
     "server:webpack": "webpack --d --watch",
     "start": "node dist/server.js",
-    "test": "mocha -r ts-node/register test/**/*.test.ts",
-    "coverage": "nyc npm run test"
+    "test": "mocha --require ts-node/register test/**/*.test.{ts,tsx}",
+    "verify": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -42,12 +43,15 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
+    "@types/jsdom": "16.2.3",
+    "@types/jsdom-global": "3.0.2",
     "@types/leaflet": "^1.5.15",
     "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
     "@types/proxyquire": "^1.3.28",
     "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
     "@types/react-leaflet": "^2.5.2",
     "@types/sinon": "^9.0.4",
     "@types/supertest": "^2.0.10",
@@ -66,6 +70,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^4.0.1",
+    "jsdom": "10.1.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
