--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "mkdirp": "^1.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-leaflet": "^2.7.0",
-    "ts-loader": "^7.0.5"
+    "react-leaflet": "^2.7.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -62,6 +61,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.2.0",
+    "css-loader": "^3.6.0",
     "csstype": "^2.6.11",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^14.1.1",
@@ -70,6 +70,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^4.0.1",
+    "file-loader": "^6.0.0",
     "jsdom": "10.1.0",
     "jsdom-global": "3.0.2",
     "mocha": "^7.2.0",
@@ -77,7 +78,9 @@
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.2",
+    "style-loader": "^1.2.1",
     "supertest": "^4.0.2",
+    "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
